--- a/style.css
+++ b/style.css
@@ -3,18 +3,59 @@
     margin: 0;
 }
 
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 header{
     padding: 20px 50px;
     display: flex;
     justify-content: space-between;
 }
 
-#cardBtn img{
+#cartBtn img{
     width: 100%;
 }
 
-#cardBtn{
+#cartBtn{
     width: 50px;
     border: none;
     background: transparent;
+}
+
+.card{
+    padding: 10px;
+    background-color: gray;
+    border-radius: 15px;
+    position: relative;
+    left: 45%;
+}
+
+.card p, h2{
+    color: white;
+}
+
+#cards{
+    display: grid;
+    grid-template-columns: repeat(3, 500px);
+    grid-column-gap: 15px;
+    grid-row-gap: 1em;
+}
+
+img{
+    margin-top: 5px;
+    border-radius: 15px;
+}
+
+a{
+    color: white;
+}
+
+.buybtn{
+    border-radius: 25px;
+    border: none;
+    width: 350px;
+    font-size: 20px;
+    position: relative;
+    left: 13%;
 }
