--- a/style.css
+++ b/style.css
@@ -3,59 +3,71 @@
     margin: 0;
 }
 
-body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+main, header {
+    margin: 5vh 10vw;
 }
 
 header{
-    padding: 20px 50px;
     display: flex;
     justify-content: space-between;
 }
 
-#cartBtn img{
-    width: 100%;
-}
-
-#cartBtn{
-    width: 50px;
+#cartButton{
+    width: 40px;
     border: none;
     background: transparent;
 }
 
-.card{
-    padding: 10px;
-    background-color: gray;
-    border-radius: 15px;
-    position: relative;
-    left: 45%;
-}
-
-.card p, h2{
-    color: white;
+#cartButton img{
+    width: 100%;
 }
 
 #cards{
     display: grid;
-    grid-template-columns: repeat(3, 500px);
-    grid-column-gap: 15px;
-    grid-row-gap: 1em;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
 }
 
-img{
-    margin-top: 5px;
-    border-radius: 15px;
+.card{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1rem;
+    border-radius: 1rem;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-a{
-    color: white;
+.cardPhoto {
+    max-width: 200px;
+    box-shadow: 0 0 5px #000;
+    border-radius: 0.5rem;
+    margin: 0.5rem 0;
+    background-color: #ffffff;
 }
 
-.buybtn{
-    border-radius: 25px;
+.card a {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #ffffff;
+    margin: 5px 0;
+}
+
+button {
+    cursor: pointer;
+    font-size: 24px;
+    border-radius: 10px;
     border: none;
-    width: 350px;
-    font-size: 20px;
-    position: relative;
-    left: 13%;
+    min-width: 50%;
+}
+
+@media screen and (max-width: 1000px){
+    #cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 600px){
+    #cards{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
