--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 main, header {
     margin: 5vh 10vw;
 }
@@ -70,4 +74,41 @@ button {
     #cards{
         grid-template-columns: repeat(1, 1fr);
     }
+}
+
+/*----------------user-profile styles-------------------------*/
+
+.ProductLink{
+    text-decoration: none;
+    color: black;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.productCont{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#profile{
+    background-color: orange;
+    padding: 10px 20px;
+    border-radius: 20px;
+    text-align: center;
+    width: 150px;
+}
+
+.profileIMG{
+    width: 100px;
+}
+
+.productIMG{
+    width: 150px;
+}
+
+#userProd{
+    background-color: orange;
+    padding: 10px 20px;
+    border-radius: 20px;
 }
