--- a/style.css
+++ b/style.css
@@ -105,10 +105,37 @@ button {
 
 .productIMG{
     width: 150px;
+    border-radius: 20px;
 }
 
 #userProd{
     background-color: orange;
     padding: 10px 20px;
+    margin: 10px;
     border-radius: 20px;
+    width: 100%;
+}
+
+.product{
+    width: 100%;
+    margin: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    padding: 10px;
+}
+
+#user-products{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    color: white;
+    padding-right: 20px;
+}
+
+#user-products h1{
+    font-size: 30px;
+}
+
+#user-products p{
+    font-size: 20px;
 }
